# System-Registration-API-2

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
student_management_app/: models.py  permissions.py  serializer.py  urls.py  views.py
student_management_app/migrations/: 0006_alter_customuser_first_name.py  0007_staffs2.py  0008_alter_staffs2_id.py  0009_students2.py  0010_students2_course_students2_gender_and_more.py  0011_courses2_subjects2.py  0012_remove_subjects2_course_subjects2_course_name_and_more.py
student_management_app/templates/hod_template/: footer.html  sidebar_template.html
student_management_app/templates/staff_template/: sidebar_template.html
student_management_app/templates/student_template/: sidebar_template.html
student_management_system/: .env  settings.py  urls.py
